syntax = "proto3";
package account_service;

import "google/protobuf/empty.proto";

message User {
  string email = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
  string country = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AddUserRequest {
  User new_user = 1;
}

message AddUserResponse {
  int32 user_id = 1;
}

message DeleteUserRequest {
  int32 user_id = 1;
}

service AccountService {
  rpc Login(LoginRequest) returns (google.protobuf.Empty) {}
  rpc AddUser(AddUserRequest) returns (AddUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {}
}