syntax = "proto3";
package account_service;

import "google/protobuf/empty.proto";

import "account-service/error.proto";

message AddUserResult {
  uint32 user_id = 1;
}

message AddUserResponse {
  oneof result {
    AddUserResult success = 1;
    AccountServiceError error = 2;
  }
}

message DeleteUserResponse {
  oneof result {
    google.protobuf.Empty success = 1;
    AccountServiceError error = 2;
  }
}
